﻿Version 0.8.6 -

- Add option to make wires in networks (power lines and railway catenaries) more realistically sized


Version 0.8.5 -

- Add creator name display and sorting to scaling panel
- Add button to clean current config of any references to unloaded prefabs
- Update EManagersLib.API


Version 0.8.4.2 hotfix -

- Fix sliders not responding to mouse dragging after scroll wheel is used
- Fix scale slider values not properly resetting on selection change


Version 0.8.4.1 hotfix -

- Fix PropAPI initialization not occuring for players without Move It (Beta version) and/or Prop Anarchy installed


Version 0.8.4 -

- Convert to new Extended Managers Library API (compatible with EML 0.8+)


Version 0.8.3 -

- Fix inter-thread communication during map (standalone) prop and tree replacement


Version 0.8.2 -

- Fix fallback to new empty configuration record where no configuration file currently exists


Version 0.8.1 -

- Improve configuration file management
- Improve hotkey response


Version 0.8 -

- Add individual network prop replacement
- Add Universal UI (UUI) button
- Add proper escape key handling
- Fix text in configuration panel 'Load and apply' button
- Add per-element exception handling to deserialization process (one failure should no longer stop other replacements from working too)
- Add user notification of exceptions
- Significant refactoring of replacement code


Version 0.7.4 -

- Sort random prop and variation lists alphabetically
- Fix mirrored X offset for networks when props are placed outside of lane position
- Update Extended Managers Library API, allowing for temporary transitional process
- Fix individual prop highlighting for sub-buildings
- Fix random panel probability slider placement
- Fix checkbox text in configurations option panel appearing only as tooltip
- Fix revert button tooltip not changing when button state changes (LITERALLY UNPLAYABLE)


Version 0.7.3 -

- Add tree/prop preview window