@@ -1,6 +1,7 @@
 ﻿Version 0.8.6 -
 
 - Add option to make wires in networks (power lines and railway catenaries) more realistically sized
+- Move settings and global configuration file locations from application directory to user directory
 
 
 Version 0.8.5 -
